[package]
name = "http-server"
version = "0.1.0"
authors = ["danielp1218"]
edition = "2025"
rust-version = "1.80"

[dependencies]
anyhow = "1.0.68"                                # error handling
bytes = "1.3.0"                                  # helps manage buffers
flate2 = "1.1.1"
thiserror = "1.0.38"                             # error handling
